r141788 won't build due to not having all changes needed by Node* change https://bugs.webkit.org/show_bug.cgi?id=108944

Reviewed by David Kilzer.

Fixed three instances of integerResult(..., m_compileIndex) to be integerResult(..., node).

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileSoftModulo):
(JSC::DFG::SpeculativeJIT::compileIntegerArithDivForARMv7s):


Canonical link: https://commits.webkit.org/127153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141894 268f45cc-cd09-0410-ab3c-d52691b4dbfc